--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Actions Demo</title>
-    <script defer src="bundle.js"></script>
+    <script defer src="index.js"></script>
 </head>
 <body>
     <h1>What day is it?</h1>
     <h2>Today are <span id="day">?</span></h2>
 
-    <img src="cat.jpg" width="500" alt="pug">
+    <img src="Jordan1.jpg" width="500" alt="pug">
 </body>
 </html>
