--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>What day is it?</h1>
     <h2>Today are <span id="day">?</span></h2>
 
-    <img src="Jordan1.jpg" width="500" alt="pug">
+    <img src="Jordan1.jpg" width="500" alt="G.O.A.T">
 </body>
 </html>
