--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Actions Demo</title>
-    <script defer src="index.js"></script>
+    <script defer src="bundle.js"></script>
 </head>
 <body>
     <h1>What day is it?</h1>
